# RapidSpeech.cpp

./: .gitignore  CMakeLists.txt  README-CN.md  README.md  setup.py
.github/workflows/: bindings_ci.yml  pypi_publish.yml  release_binaries.yml
assets/omnivoice/: benchmark.csv
docs/: CUDA_10.2_JETSON_NANO.md  MATCHA_TTS_GGML_PORT.md  XASR_ZIPFORMER2.md  campplus.md  cosyvoice3.md  funasr-nano.md  index2tts.md  kokoro.md  moss_streaming_integration.md  omnivoice.md  openvoice2.md  sensevoice.md  vad.md  x-asr.md
examples/asr/: rs-asr-offline.cpp  rs-asr-online.cpp  rs-asr-vad-online.cpp  rs-speaker-id.cpp  rs-xasr-ws-server.cpp
examples/common/: rs_cli_utf8.h
examples/imatrix/: imatrix_collector.h  rs-imatrix.cpp
examples/kws/: rs-kws.cpp
examples/matcha_server/: README.md  matcha_server.cpp  matcha_tts_server.cpp
examples/quantize/: common_quantize.cpp  common_quantize.h  quantize.cpp
examples/server/: README.md  rs-server.cpp  rs_json.h  rs_ws.h  webui.html
examples/tts/: omnivoice.md  rs-tts-offline.cpp  rs-tts-online.cpp  rs-tts-split.cpp
include/: rapidspeech.h
node-api-example/: README.md
patches/: ggml-cuda-10.2-sm53.patch  ggml-iterative-visit-parents.patch  ggml-wasm-relaxed-dot-q4k.patch  ggml-webgpu-subgroup-killswitch.patch
python-api-examples/: README.md
python-api-examples/asr/: asr-offline.py  asr-online.py
rapidspeech/python/: pybind_rapidspeech.cpp
rapidspeech/src/arch/: campplus.cpp  campplus.h  context_graph.cpp  context_graph.h  cosyvoice3_flow.cpp  cosyvoice3_flow.h  cosyvoice3_hift.cpp  cosyvoice3_hift.h  cosyvoice3_speech_tokenizer.cpp  cosyvoice3_speech_tokenizer.h  fireredvad.cpp  fireredvad.h  funasr-nano.cpp  funasr-nano.h  indextts2.cpp  indextts2.h  indextts2_bigvgan.cpp  indextts2_bigvgan_metal.h  indextts2_bigvgan_metal.mm  indextts2_gpt.cpp  indextts2_qwen_emo.cpp  indextts2_s2mel.cpp  indextts2_tokenizer.cpp  kokoro.cpp  llm_graph.cpp  llm_graph.h  llm_kv_cache.cpp  llm_model.cpp  matcha.cpp  matcha.h  mbistft_vits.cpp  mbistft_vits.h  moss_loop_guard.h  moss_td.cpp  moss_td.h  moss_tts_nano.cpp  moss_tts_nano.h  omnivoice.cpp  omnivoice.h  openvoice2.cpp  (+21 more)
rapidspeech/src/arch/moss_td/: ATTRIBUTION.md  UPSTREAM_REV  audio_adaptor.cpp  audio_adaptor.hpp  audio_encoder.cpp  audio_encoder.hpp  audio_io.cpp  audio_io.hpp  audio_span.cpp  audio_span.hpp  backend.cpp  backend.hpp  cli.cpp  common.cpp  common.hpp  config.hpp  fft.cpp  fft.hpp  generate.cpp  generate.hpp  ggml_extend.hpp  mel.cpp  mel.hpp  model_loader.cpp  model_loader.hpp  moss_transcribe_capi.cpp  qwen3.cpp  qwen3.hpp  qwen3_decoder.cpp  qwen3_decoder.hpp  subtitle.cpp  subtitle.hpp  tokenizer.cpp  tokenizer.hpp  transcribe.cpp  transcribe.hpp  transcript_parser.cpp  transcript_parser.hpp  whisper_encoder.cpp  whisper_encoder.hpp
rapidspeech/src/arch/moss_td/include/: moss_transcribe.h  moss_transcribe_capi.h
rapidspeech/src/c_api/: rapidspeech_c.cpp  rs_vad.cpp
rapidspeech/src/core/: rs_context.cpp  rs_context.h  rs_model.h  rs_processor.cpp  rs_processor.h
rapidspeech/src/frontend/: audio_processor.cpp  audio_processor.h  matcha_frontend.cpp  matcha_frontend.h  mel_cufft.cu  mel_cufft.h  qwen3_mel.cpp  qwen3_mel.h  seamless_mel.cpp  seamless_mel.h  text_frontend.cpp  text_frontend.h  whisper_mel.cpp  whisper_mel.h
rapidspeech/wasm/: CMakeLists.txt  build-wasm.sh  rapidspeech_wasm.cpp
scripts/: build_espeak_ng_nano.sh  build_jetson_nano_gen1.sh  build_jetson_nano_gen1_native.sh  convert_campplus_to_gguf.py  convert_hf_to_gguf.py  convert_matcha_onnx_to_gguf.py  convert_melo8k_merge.py  convert_moss_codec_to_gguf.py  convert_moss_nano_to_gguf.py  convert_moss_td_to_gguf.py  convert_qwen3_asr_to_gguf.py  convert_silero_to_gguf.py  gen_resnet_ref.py  gen_vocos_fixture.py  merge_moss_gguf.py
scripts/nano_cuda_compat/: cuda_bf16.h  neon_x4_shim.h  nvcc_compat.h
scripts/xasr/: Dockerfile.jetpack46-cuda  build_cuda_jetpack46.sh  convert_xasr_to_gguf.py  dump_reference.py  inspect_onnx.py  ws_client.py
tests/: test_moss_loop_guard.cpp
tests/bindings/python/: test_surface.py
tools/: matcha_attn_validate.cpp  matcha_decoder_validate.cpp  matcha_e2e_test.cpp  matcha_encoder_validate.cpp  matcha_full_encoder_validate.cpp  matcha_resnet_validate.cpp  matcha_snake_validate.cpp  matcha_vocos_validate.cpp  mbistft_parity.cpp  mbistft_parity_compare.py  moss_gen.cpp  moss_kv.cpp  moss_load_test.cpp  moss_local_parity.cpp  moss_parity.cpp  moss_td_profile.cpp  moss_td_stream.cpp  moss_td_test.cpp  speaker_embed_cli.cpp  stamp_build.sh  xasr_dev_test.cpp
tools/matcha_frontend_parity/: README.md  corpus.txt  frontend_dump.cpp  sherpa_gold.py
tools/moss_cuda/: README.md  moss_matvec_fp16_sm53.cu  moss_matvec_q8_sm53.cu
wasm-examples/: rapidspeech-bridge.js  serve.py  styles.css  utils.js
wasm-examples/moss/: app-wasm.js  coi-sw.js  index.html  moss-worker.js  rapidspeech-wasm-gpu.js  rapidspeech-wasm-ios.js  rapidspeech-wasm-ios.wasm  rapidspeech-wasm-mt.js  rapidspeech-wasm-mt.wasm  rapidspeech-wasm-mtx.js  rapidspeech-wasm-mtx.wasm
